--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "PandaHugMonster/mpay24",
+	"name": "panda-hug-monster/mpay24",
 	"description": "mPAY24 PHP API",
 	"keywords": ["mpay24", "api", "library"],
 	"homepage": "https://github.com/PandaHugMonster/mpay24",
