Experimental try of composer attachment

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "mPAY24 PHP API",
 	"keywords": ["mpay24", "api", "library"],
 	"homepage": "https://github.com/PandaHugMonster/mpay24",
-	"license": "https://github.com/PandaHugMonster/mpay24/blob/master/LICENSE.md",
+	"license": "LICENSE.md",
 	"authors": [
 		{ "name": "Anna Sadriu", "email": "modules@mpay24.com", "homepage": "https://www.mpay24.com", "role": "developer" },
 		{ "name": "Tobias Lins", "email": "tobias@lins.in", "homepage": "https://lins.in/", "role": "developer" },
