--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
   "name": "mpay24/mpay24-php",
   "description": "Offical PHP SDK for SOAP Bindings",
   "require": {
-    "php": ">=5.3.3"
+    "php": ">=5.3.3",
+    "ext-curl": "*",
+    "ext-dom": "*",
+    "ext-mcrypt": "*"
   }
 }
