--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mpay24/mpay24-php",
+  "name": "netbull/mpay24-php",
   "description": "Offical PHP SDK for SOAP Bindings",
   "autoload": {
     "psr-4": { "mPay24\\" : "lib/" }
