--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mpay24/Mpay24-php",
+  "name": "mpay24/mpay24-php",
   "description": "Offical PHP SDK for SOAP Bindings",
   "autoload": {
     "psr-4": {
@@ -11,10 +11,5 @@
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-mcrypt": "*"
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Mpay24Test\\": "test/"
-    }
   }
 }
