fixed test configuration
* directory `tests` instead of `test`
* autoloading unittest files
* removed tests - directory from ignored resources

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
       "Mpay24\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Mpay24Test\\": "test/"
+    }
+  },
   "require": {
     "php": ">=5.3.3",
     "ext-curl": "*",
