--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Mpay24Test\\": "test/"
+      "Mpay24Test\\": "tests/"
     }
   },
   "license": "MIT",
@@ -18,6 +18,7 @@
     "ext-dom": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.2"
+    "phpunit/phpunit": "^7.2",
+    "phpstan/phpstan": "^0.12.9"
   }
 }
