Update PHPUnit to current version 8.5 or higher

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/composer.lock
-/.idea
 /.buildpath
+/.idea
 /.settings
-.DS_STORE
-*.log
-/nbproject/
+/nbproject
 /vendor
+*.log
+.DS_STORE
+.phpunit.result.cache
+composer.lock
