--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
   "require-dev": {
     "phpunit/phpunit": "^8.5",
     "phpstan/phpstan": "^0.12.9"
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
